# llmemory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  FINAL-SUMMARY.md  LICENSE  MANIFEST.in  PGDBM_DEVIATIONS_ANALYSIS.md  PGDBM_EXPLORATION.md  README.md  READY-FOR-PRESENTATION.md  REFACTORING_SUMMARY.md  SOTA-IMPLEMENTATION-COMPLETE.md  pgdbm  pyproject.toml  pytest.ini  run_server.py
.claude-plugin/: plugin.json
.claude/skills/basic-usage/: SKILL.md
.github/workflows/: publish.yml  test.yml
bench/: RESULTS.md  beir_runner.py  sota_benchmark.py
docs/: ARCHITECTURE_REVIEW.md  api-reference.md  installation.md  integration-guide.md  migrations.md  monitoring.md  quickstart.md  testing-guide.md  usage-patterns.md
docs/plans/: 2025-10-26-sota-rag-implementation.md
examples/: README.md  local_embeddings_example.py  pattern_1_standalone.py  pattern_2_library.py  pattern_3_application.py  validation_and_config_example.py
skills/basic-usage/: SKILL.md
skills/multi-tenant/: SKILL.md
skills/rag/: SKILL.md
src/llmemory/: __init__.py  archive.py  batch_processor.py  chunking.py  cli.py  config.py  db.py  embedding_providers.py  embeddings.py  exceptions.py  indexer.py  language_processing.py  library.py  manager.py  models.py  monitoring.py  query_expansion.py  query_router.py  reranker.py  search_optimizer.py  testing.py  validators.py
src/llmemory/migrations/: 001_complete_schema.sql  002_upsert_identity_contract.sql  __init__.py
tests/: __init__.py  conftest.py  test_api_integration.py  test_archive_scanner.py  test_beir_runner.py  test_chunking_quality.py  test_chunking_simple.py  test_config.py  test_contextual_chunking.py  test_contextual_retrieval.py  test_db_integration.py  test_embedding_generation.py  test_embedding_providers.py  test_enhanced_chunking.py  test_error_handling.py  test_hnsw_profile.py  test_identity_contract.py  test_indexer.py  test_integration_simple.py  test_manager.py  test_new_api_methods.py  test_optimized_search.py  test_parent_context.py  test_pgvector_operations.py  test_query_expansion.py  test_query_router.py  test_reranker.py  test_schema_isolation.py  test_search_optimizer.py  test_search_performance.py  test_search_quality.py  test_search_sync.py  test_search_types_integration.py.skip  test_search_types_integration.py.skip.README  test_shared_pool.py  test_sota_compliance.py  test_timeouts.py  test_validation_and_errors.py
tests/res/: artificial_intelligence.txt  climate_change.txt  quantum_computing.txt  renewable_energy.txt  space_exploration.txt
